# Fast-Api-Learning

./: README.md
Books/: books.py  books2.py  employees.py  pyproject.toml
Post_Todo_App/: database.py  pyproject.toml
Post_Todo_App/routers/: admin.py  auth.py
StoryDay/: database.py  main.py  models.py  pyproject.toml  storyapp.db
StoryDay/routers/: admin.py  auth.py  stories.py  user.py
Todo_App/: database.py  main.py  models.py  pyproject.toml  todo.db  todoapp.db  todoapp0.db  todoapp1.db
Todo_App/routers/: admin.py  auth.py  todos.py  user.py
appointment_booking/: .env  alembic.ini  config.py  main.py  pyproject.toml
appointment_booking/alembic/: env.py
appointment_booking/alembic/versions/: 53f9af904c61_fix_working_hours_constraints.py  6566e412d57d_initial_schema.py  a2c90b68a588_user_table_update.py  c3ca7b7f4a77_role_table_is_added.py  ce47fd76c7b9_initial_tables.py
appointment_booking/app/: dependencies.py  error_enum.py  schema.py
appointment_booking/app/appointments/: router.py
appointment_booking/app/auth/: hashing.py  router.py  service.py
appointment_booking/app/auth/models/: user.py
appointment_booking/app/auth/schema/: user.py
appointment_booking/app/auth/services/: user_service.py
appointment_booking/app/auth/utils/: hashing.py
appointment_booking/app/core/: database.py
appointment_booking/app/logging/: logger.py  middleware.py
appointment_booking/app/models/: appointment.py  role.py  service.py  staff_profile.py  user.py  working_hour.py
appointment_booking/app/role/: router.py  services.py
appointment_booking/app/schema/: api_response.py  appointment.py  role.py  service.py  staff.py  user.py  working_hour.py
appointment_booking/app/services/: router.py
appointment_booking/app/staff/: router.py
appointment_booking/app/todo/: todo.py
appointment_booking/app/users/: router.py
job_board/: .env  config.py  database.py  job_board.db  logger.py  main.py  middleware.py  models.py  pyproject.toml
job_board/router/: admin.py  applications.py  auth.py  job_listing.py
task_app/: database.py  logger.py  main.py  models.py  pyproject.toml  todo.py  todos.db  user.py
task_app/router/: todos.py  user.py
